--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,6 +10,7 @@
   --color-brand-beige: #EEE8DC;
   --color-brand-blue: #05064D;
   --color-stone-custom: #1C1917;
+  --color-brand-white: #FFFFFF;
 
   --animate-fade-in-up: fade-in-up 0.8s ease-out forwards;
 
